      next time the panes are messed up
    * Added logic to start editing in the tree if the user starts typing while
      one of the nodes is selected. It moves focus to the right hand pane
      if necessary. It does, however, lose the first key when you start typing.
    * The Move No Drop cursor is now displayed when dragging a node over a
      drop target that rejects it.

8/11/2004   version 0.2 pre17   Ian Lewis <IanLewis@member.fsf.org>

    * Added back the replace field on the find and replace dialog in the
      source view but this time it works!
    * The source view now selects the text correctly in Linux when you do a
      find without first setting focus to the text area.
    * Removed the Find Next menu item since it doesn't work yet.
    * Lengthened the max length of text displayed in the tree for a text node.

08/10/2004  version 0.2 pre16   Ian Lewis <IanLewis@member.fsf.org>

    * Removed code in the TabbedView that assumed that the DocumentView was
      the same reference as the document view component.
    * Made the search dialog get the parent frame so it works better now.
    * Removed the replace field since it doesn't work.

07/30/2004  version 0.2 pre15   Ian Lewis <IanLewis@member.fsf.org>

    * Added replace field to the search dialog.

07/27/2004  version 0.2 pre14   Ian Lewis <IanLewis@member.fsf.org>

    * Added a very preliminary search and replace dialog to the source view.
      jsXe now requires the gnu.regexp package

07/26/2004  version 0.2 pre13   Ian Lewis <IanLewis@member.fsf.org>

    * Implemented actions by putting them in ActionSets and having them be
      registered with the jsXe application. This will allow implementation of
      a feature to allow users to set key mnemonics (shortcuts) to actions
      easier.
    * Fixed a bug that caused jsXe to not allow you to open documents that
      were not well formed.
    * Implemented the soft-tabs feature in the source view.
