@@ -148,12 +148,22 @@ public class SourceView extends JPanel implements DocumentView {
         
     }//}}}
     
+    //{{{ getTextArea()
+    
+    public JTextArea getTextArea() {
+        return textarea;
+    }//}}}
+    
     //{{{ DocumentView methods
     
     //{{{ close()
     
     public boolean close() {
         m_document.getXMLDocument().removeXMLDocumentListener(docListener);
+        SourceViewSearchDialog dialog = SourceViewSearchDialog.getSearchDialog();
+        if (dialog != null) {
+            dialog.dispose();
+        }
         return true;
     }//}}}
     
@@ -347,16 +357,7 @@ public class SourceView extends JPanel implements DocumentView {
         //{{{ actionPerformed()
         
         public void actionPerformed(ActionEvent e) {
-            
-            //Assumed that a view is added to a frame.
-            Container parent = getParent();
-            while (!(parent instanceof Frame)) {
-                parent = parent.getParent();
-            }
-            Frame frame = (Frame)parent;
-            //display find dialog
-            SourceViewSearchDialog dialog = new SourceViewSearchDialog(frame, SourceView.this, textarea);
-            dialog.setVisible(true);
+            SourceViewSearchDialog.showSearchDialog(SourceView.this);
         }//}}}
         
     }//}}}
